Finish pt-BR translation

--- a/app/locales/en/translation.json
+++ b/app/locales/en/translation.json
@@ -12,6 +12,33 @@
   "loading": "Loading...",
   "client": "Client",
   "server": "Server",
+  "when": "When",
+  "ISP": "ISP",
+  "Search": "Search",
+  "By Tags": "By Tags",
+  "By ISP": "By ISP",
+  "By Server Name": "By Server Name",
+  "noResult": "We don't have any test matching your query.",
+  "Clear Query" : "Clear Query",
+  "ISP Name": "ISP Name",
+  "Internal IP": "Internal IP",
+  "Name": "Name",
+  "No Name": "There's no name",
+  "MAC Adress": "MAC Adress",
+  "Yes": "Yes",
+  "No": "No",
+  "External IP": "External IP",
+  "Location": "Location",
+  "ID": "ID",
+  "IP": "IP",
+  "VPN": "VPN",
+  "Host": "Host",
+  "Back": "Back",
   "language": "Language",
-  "Select your language": "Select your language"
+  "Select your language": "Select your language",
+  "Add tags": "Add tags",
+  "Update tags": "Update tags",
+  "Tags should be separated by comma ( , )": "Tags should be separated by comma ( , )",
+  "tags": {"example": "Example: Tag, this is a tag, this is another tag"},
+  "To update or delete a tag just edit the text inside the input and press Update Tags or Enter": "To update or delete a tag just edit the text inside the input and press Update Tags or Enter"
 }
