--- a/app/locales/pt-BR/translation.json
+++ b/app/locales/pt-BR/translation.json
@@ -12,6 +12,33 @@
   "loading": "Carregando...",
   "client": "Cliente",
   "server": "Servidor",
+  "when": "Quando",
+  "ISP": "Provedor",
+  "Search": "Pesquisar",
+  "By Tags": "Por Tags",
+  "By ISP": "Por Servidor",
+  "By Server Name": "Por Servidor",
+  "noResult": "Não temos nenhum teste correspondente à sua consulta.",
+  "Clear Query" : "Limpar pesquisa",
+  "ISP Name": "Nome do Servidor",
+  "Internal IP": "IP Interno",
+  "Name": "Nome",
+  "No Name": "Sem nome",
+  "MAC Adress": "Endereço MAC",
+  "Yes": "Sim",
+  "No": "Não",
+  "External IP": "IP Externo",
+  "Location": "Localização",
+  "ID": "ID",
+  "IP": "IP",
+  "VPN": "VPN",
+  "Host": "Host",
+  "Back": "Voltar",
   "language": "Linguagem",
-  "Select your language": "Escolha sua linguagem"
+  "Select your language": "Escolha sua linguagem",
+  "Add tags": "Adicionar tags",
+  "Update tags": "Atualizar tags",
+  "Tags should be separated by comma ( , )": "Tags devem ser separadas por virgula ( , )",
+  "tags": {"example": "Exemplo: Tag, essa é uma tag, essa é outra tag"},
+  "To update or delete a tag just edit the text inside the input and press Update Tags or Enter": "Para atualizar ou deleta uma tag, basta editar o texto dentro do campo e apertar o botão 'Atualizar tags' ou pressionar Enter"
 }
