Add a message about speedtest-cli on the footer component

--- a/app/locales/en/translation.json
+++ b/app/locales/en/translation.json
@@ -62,6 +62,7 @@
   "speedtest cli NOT FOUND": "speedtest-cli NOT FOUND",
   "Speedcheck app only works with": "Speedcheck app only works with",
   "cli tool developed by": "cil tool developed by",
+  "This app uses the": "This app uses the",
   "Would you like to download it?": "Would you like to download it?",
   "Please show where speedtest exe version 1 0 0 win64 is placed": "Please, show where speedtest.exe version 1.0.0-win64 is placed!"
 
