Change name to SpeedProof

--- a/app/locales/en/translation.json
+++ b/app/locales/en/translation.json
@@ -45,7 +45,7 @@
   "End": "End",
   "Select the dates": "Select the dates...",
   "About": "About",
-  "about p1": "SpeedCheck is usefull for anyone who needs to keep track of the velocity of your internet service.",
+  "about p1": "SpeedProof is usefull for anyone who needs to keep track of the velocity of your internet service.",
   "about p2 1": "This app uses the command line tool mabe by",
   "about p2 2": ", check out the",
   "about p2 3": "website to know more.",
@@ -60,7 +60,7 @@
   "speedtest-cli Terms text": "You may only use the Speedtest software and information generated from it for personal, non-commercial use, through a command line interface on a personal computer. Your use of this software is subject to the End User License Agreement, Terms of Use and Privacy Policy at these URLs:",
   "accept license": "I ACCEPT THE LICENSE!",
   "speedtest cli NOT FOUND": "speedtest-cli NOT FOUND",
-  "Speedcheck app only works with": "Speedcheck app only works with",
+  "SpeedProof app only works with": "SpeedProof app only works with",
   "cli tool developed by": "cil tool developed by",
   "This app uses the": "This app uses the",
   "Would you like to download it?": "Would you like to download it?",
